Alignment  fix 2

--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,14 @@
     margin-left: 20px;
     height: 200px;
 }
+
+#hover-img .caption-btm {
+background: rgba(4, 186, 183, 0.6);
+width: 70%;   ********
+height: 60px;
+position: absolute;
+bottom: 4px;
+color: #fff;
+display: none;
+width: 100%;    ********
+}
